fix trestles link flexbox on small screens

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -6,3 +6,12 @@
   font-size: 4em;
   background-position: center;
 }
+@media (max-width: 991.98px) {
+  div.quarto-about-trestles .about-entity .about-links {
+    width: 100%;
+    padding-bottom: 1.5em;
+    column-gap: 0.5em;
+    flex-direction: row;
+    font-size: 0.85em;
+  }
+}
